# data-engineering

./: .gitignore  README.md
PROJECT-breastfeeding_analysis/: .gitignore  README.md  requirements.txt
PROJECT-breastfeeding_analysis/dbt_transform/: .user.yml  dbt_project.yml  profiles.yml  schema.yml
PROJECT-breastfeeding_analysis/ingestion/: download_data.py  upload_to_gcs.py
PROJECT-breastfeeding_analysis/ochestration/: pipeline_flow.py
PROJECT-breastfeeding_analysis/terraform/: main.tf  (+4 more)
demo/: docker-compose.yml
docker/: dockerize-pipeline.md  ingest-data.md  intro.md  virtual-environment-setup.md
documentation/: 02_virtual-environment-setup.md  03_dockerize-pipeline.md  04_run-postgres-docker.md
homework_1_docker_and_terraform/: homework1_solution.md
homework_2_kestra/: docker-compose.yml  download  homework.md  homework2_solution.md  main.tf  terraform.tfstate
homework_3_datawarehouse/: homework3_solution.md
homework_4_analytics/: homework4_solution.md  load.py  loadfhv.py
homework_5_data_platforms/: homework.md  homework5_solution.md
homework_6_batch_processing/: homework6_solution.md
homework_6_batchprocessing/: homework.md  homework6_solution.md
homework_7_streaming/: homework.md  homework7_solution.md
homework_workshop/: README.md  homework.md  workshop.md
newdemo/: Untitled.ipynb  docker-compose.yml  main.py  pyproject.toml
pipeline/: Dockerfile  README.md  ingest-data.py  notebook.ipynb  pipeline.ipynb  pipeline.py  pyproject.toml
project/: project.md
test/: script.py
testing/: load_data.py  load_data_manual.py
(+44 files in other folders)
