[project]
name = "newdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2025.12.0",
    "pandas>=3.0.0",
    "psycopg2>=2.9.11",
    "pyarrow>=23.0.0",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
